objects/govdelivery__GovDelivery_Engagement_Activity__c.object
<CustomObject>
    <description>An engagement activity from GovDelivery.</description>
    <fields>
        <fullName>govdelivery__Bulletin_ID__c</fullName>
        <description>ID of the associated GovDelivery Bulletin</description>
        <externalId>true</externalId>
        <label>Bulletin ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>govdelivery__Contact__c</fullName>
        <description>The Contact involved in a GovDelivery Engagement Event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GovDelivery Engagement Activities</relationshipLabel>
        <relationshipName>GovDelivery_Engagement_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>govdelivery__Data__c</fullName>
        <description>Additional data associated with an Engagement Activity.</description>
        <label>Activity Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>govdelivery__OccurredAt__c</fullName>
        <description>The date and time that the engagement activities occurred.</description>
        <label>Occurred At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>govdelivery__Type__c</fullName>
        <description>The type of Engagement Activity that occurred, e.g. &quot;open&quot; or &quot;bounce&quot;.</description>
        <label>Type</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GovDelivery Engagement Activity</label>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GovDelivery Engagement  Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>